add more test cases

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,5 +6,6 @@
 
 * [NsengaNigel](https://github.com/NsengaNigel)
 * [Contributor 1](https://github.com/contributor1-NsengaNigel)
-
+* [gershnsenga](https://github.com/NsengaNigel)
+* [Contributor 1](https://github.com/contributor1-NsengaNigel)
 Please add your name and GitHub username to this list if you contribute to the project.
